5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1674_1107.log
== TEST (2019-04-30 10:47:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n%6+n 

if(n > 6):
	print("A entrada", n, "eh invalida")
elif(n = 0):
	x =("segunda")
elif(n = 1):
	x =("terca")
elif(n = 2):
	x =("quarta")
elif(n = 3):
	x =("quinta")
elif(n = 4):
	x =("sexta")
elif(n = 5):
	x =("sabado")	
elif(n = 6):
	x =("domingo")

print("Hoje eh", x "e o dia futuro eh", df)	
	
-- ERROR:
File "XXXX", line 11
    elif(n = 0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:47:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n%6+n 

if(n > 6):
	print("A entrada", n, "eh invalida")
elif(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x "e o dia futuro eh", df)	
	
-- ERROR:
File "XXXX", line 26
    print("Hoje eh", x "e o dia futuro eh", df)	
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:48:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n%6+n 

if(n > 6):
	print("A entrada", n, "eh invalida")
elif(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x "e o dia futuro eh" , df)	
	
-- ERROR:
File "XXXX", line 26
    print("Hoje eh", x "e o dia futuro eh" , df)	
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:48:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n%6+n 

if(n > 6):
	print("A entrada", n, "eh invalida")
elif(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 26, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , df)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:57:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	x = df%7
	else:
	x = df
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:57:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	x = df%7
	else:
	x = df
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:57:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	x = df%7
	else
	x = df
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- ERROR:
File "XXXX", line 14
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:58:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	x = df%7
	else:
		x = df
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:58:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	x = df%7
	else:
		x = df
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:58:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	x = df%7
else:
		x = df
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- OUTPUT:
Hoje eh 4 e o dia futuro eh 18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:59:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	x = df%7
elif(x == 0):
	e =("segunda")
elif(x == 1):
	e =("terca")
elif(x == 2):
	e =("quarta")
elif(x == 3):
	e =("quinta")
elif(x == 4):
	e =("sexta")
elif(x == 5):
	e =("sabado")	
elif(x == 6):
	e =("domingo")
else:
	x = df
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- OUTPUT:
Hoje eh 4 e o dia futuro eh 18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:00:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	x = df%7
elif(x == 0):
	e =("segunda")
elif(x == 1):
	e =("terca")
elif(x == 2):
	e =("quarta")
elif(x == 3):
	e =("quinta")
elif(x == 4):
	e =("sexta")
elif(x == 5):
	e =("sabado")	
elif(x == 6):
	e =("domingo")
else:
	x = df
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- OUTPUT:
Hoje eh 4 e o dia futuro eh 18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:03:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	e = df%7
else:
	e = df

if(e == 0):
	e =("segunda")
elif(e == 1):
	e =("terca")
elif(e == 2):
	e =("quarta")
elif(e == 3):
	e =("quinta")
elif(e == 4):
	e =("sexta")
elif(e == 5):
	e =("sabado")	
elif(e == 6):
	e =("domingo")
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , df)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 47, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , df)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:03:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	e = df%7
else:
	e = df

if(e == 0):
	e =("segunda")
elif(e == 1):
	e =("terca")
elif(e == 2):
	e =("quarta")
elif(e == 3):
	e =("quinta")
elif(e == 4):
	e =("sexta")
elif(e == 5):
	e =("sabado")	
elif(e == 6):
	e =("domingo")
	
if(n == 0):
	x =("segunda")
elif(n == 1):
	x =("terca")
elif(n == 2):
	x =("quarta")
elif(n == 3):
	x =("quinta")
elif(n == 4):
	x =("sexta")
elif(n == 5):
	x =("sabado")	
elif(n == 6):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , e)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 47, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , e)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:04:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	e = df%7
else:
	e = df

if(e == 1):
	e =("segunda")
elif(e == 2):
	e =("terca")
elif(e == 3):
	e =("quarta")
elif(e == 4):
	e =("quinta")
elif(e == 5):
	e =("sexta")
elif(e == 6):
	e =("sabado")	
elif(e == 0):
	e =("domingo")
	
if(n == 1):
	x =("segunda")
elif(n == 2):
	x =("terca")
elif(n == 3):
	x =("quarta")
elif(n == 4):
	x =("quinta")
elif(n == 5):
	x =("sexta")
elif(n == 6):
	x =("sabado")	
elif(n == 0):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , e)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 47, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , e)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:04:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	e = df%7
else:
	e = df

if(e == 1):
	e =("segunda")
elif(e == 2):
	e =("terca")
elif(e == 3):
	e =("quarta")
elif(e == 4):
	e =("quinta")
elif(e == 5):
	e =("sexta")
elif(e == 6):
	e =("sabado")	
elif(e == 0):
	e =("domingo")
	
if(n == 1):
	x =("segunda")
elif(n == 2):
	x =("terca")
elif(n == 3):
	x =("quarta")
elif(n == 4):
	x =("quinta")
elif(n == 5):
	x =("sexta")
elif(n == 6):
	x =("sabado")	
elif(n == 0):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , e)	
	
-- EXECUTION TIME:
0.19772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 47, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , e)	
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:04:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	e = df%7
else:
	e = df

if(e == 1):
	e =("segunda")
elif(e == 2):
	e =("terca")
elif(e == 3):
	e =("quarta")
elif(e == 4):
	e =("quinta")
elif(e == 5):
	e =("sexta")
elif(e == 6):
	e =("sabado")	
elif(e == 0):
	e =("domingo")
	
if(n == 1):
	x =("segunda")
elif(n == 2):
	x =("terca")
elif(n == 3):
	x =("quarta")
elif(n == 4):
	x =("quinta")
elif(n == 5):
	x =("sexta")
elif(n == 6):
	x =("sabado")	
elif(n == 0):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , e)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 47, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , e)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:04:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
	
if(df>6):
	e = df%7
else:
	e = df

if(e == 1):
	e =("segunda")
elif(e == 2):
	e =("terca")
elif(e == 3):
	e =("quarta")
elif(e == 4):
	e =("quinta")
elif(e == 5):
	e =("sexta")
elif(e == 6):
	e =("sabado")	
elif(e == 0):
	e =("domingo")
	
if(n == 1):
	x =("segunda")
elif(n == 2):
	x =("terca")
elif(n == 3):
	x =("quarta")
elif(n == 4):
	x =("quinta")
elif(n == 5):
	x =("sexta")
elif(n == 6):
	x =("sabado")	
elif(n == 0):
	x =("domingo")

print("Hoje eh", x ,"e o dia futuro eh" , e)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 47, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , e)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:06:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
else:
	
	if(df>6):
		e = df%7
	else:
		e = df

	if(e == 1):
		e =("segunda")
	elif(e == 2):
		e =("terca")
	elif(e == 3):
		e =("quarta")
	elif(e == 4):
		e =("quinta")
	elif(e == 5):
		e =("sexta")
	elif(e == 6):
		e =("sabado")	
	elif(e == 0):
		e =("domingo")

	if(n == 1):
		x =("segunda")
	elif(n == 2):
		x =("terca")
	elif(n == 3):
		x =("quarta")
	elif(n == 4):
		x =("quinta")
	elif(n == 5):
		x =("sexta")
	elif(n == 6):
		x =("sabado")	
	elif(n == 0):
		x =("domingo")

	print("Hoje eh", x ,"e o dia futuro eh" , e)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 48, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , e)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:06:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
else:
	
	if(df>6):
		e = df%7
	else:
		e = df

	if(e == 1):
		e =("segunda")
	elif(e == 2):
		e =("terca")
	elif(e == 3):
		e =("quarta")
	elif(e == 4):
		e =("quinta")
	elif(e == 5):
		e =("sexta")
	elif(e == 6):
		e =("sabado")	
	elif(e == 0):
		e =("domingo")

	if(n == 1):
		x =("segunda")
	elif(n == 2):
		x =("terca")
	elif(n == 3):
		x =("quarta")
	elif(n == 4):
		x =("quinta")
	elif(n == 5):
		x =("sexta")
	elif(n == 6):
		x =("sabado")	
	elif(n == 0):
		x =("domingo")

	print("Hoje eh", x ,"e o dia futuro eh" , e)	

-- EXECUTION TIME:
0.124709
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 48, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , e)	
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:07:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0):
	print("A entrada", n, "eh invalida")
else:
	
	if(df>6):
		e = df%7
	else:
		e = df

	if(e == 1):
		e =("segunda")
	elif(e == 2):
		e =("terca")
	elif(e == 3):
		e =("quarta")
	elif(e == 4):
		e =("quinta")
	elif(e == 5):
		e =("sexta")
	elif(e == 6):
		e =("sabado")	
	elif(e == 0):
		e =("domingo")

	if(n == 1):
		x =("segunda")
	elif(n == 2):
		x =("terca")
	elif(n == 3):
		x =("quarta")
	elif(n == 4):
		x =("quinta")
	elif(n == 5):
		x =("sexta")
	elif(n == 6):
		x =("sabado")	
	elif(n == 0):
		x =("domingo")

	print("Hoje eh", x ,"e o dia futuro eh" , e)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 48, in <module>
    print("Hoje eh", x ,"e o dia futuro eh" , e)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:08:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
n = int(input("Insira o dia da semana:"))
n1 = int(input("Insira numero do futuro:"))

df = n+n1

if(n < 0 or n > 7):
	print("A entrada", n, "eh invalida")
else:
	
	if(df>6):
		e = df%7
	else:
		e = df

	if(e == 1):
		e =("segunda")
	elif(e == 2):
		e =("terca")
	elif(e == 3):
		e =("quarta")
	elif(e == 4):
		e =("quinta")
	elif(e == 5):
		e =("sexta")
	elif(e == 6):
		e =("sabado")	
	elif(e == 0):
		e =("domingo")

	if(n == 1):
		x =("segunda")
	elif(n == 2):
		x =("terca")
	elif(n == 3):
		x =("quarta")
	elif(n == 4):
		x =("quinta")
	elif(n == 5):
		x =("sexta")
	elif(n == 6):
		x =("sabado")	
	elif(n == 0):
		x =("domingo")

	print("Hoje eh", x ,"e o dia futuro eh" , e)	

-- EXECUTION TIME:
0.176446
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
